Add hyperlink in docs

--- a/SyncBox-Docs/site/index.html
+++ b/SyncBox-Docs/site/index.html
@@ -171,7 +171,7 @@ The following measures are included in SyncBox,</p>
 </ul>
 <p>Feel free to refer to <code>References/Toolbox functions</code> for more details.</p>
 <h4 id="about">About:</h4>
-<p>This toolbox is built by <a href="https://pranavmahajan25.github.io/portfolio/">Pranav Mahajan</a> and <a href="https://www.linkedin.com/in/advait-rane-858b10190/?originalSubdomain=in">Advait Rane</a>, under the supervision of Swapna Sasi and <a href="https://www.bits-pilani.ac.in/goa/basabdattab/profile">Dr. Basabdatta Sen Bhattacharya</a>. 
+<p>This toolbox is built by <a href="https://pranavmahajan25.github.io/portfolio/">Pranav Mahajan</a> and <a href="https://www.linkedin.com/in/advait-rane-858b10190/?originalSubdomain=in">Advait Rane</a>, under the supervision of <a href="https://scholar.google.co.in/citations?hl=en&amp;user=UtIwuWcAAAAJ">Swapna Sasi</a> and <a href="https://www.bits-pilani.ac.in/goa/basabdattab/profile">Dr. Basabdatta Sen Bhattacharya</a>. 
 We hope these tools will be useful to neuroscientists, information theorists, physicists, communication engineers and more. 
 Feel free to reach out at f20170277@goa.bits-pilani.ac.in with suggestions or feedback!</p>
 <p>References:</p>
@@ -229,5 +229,5 @@ Feel free to reach out at f20170277@goa.bits-pilani.ac.in with suggestions or fe
 
 <!--
 MkDocs version : 1.1
-Build Date UTC : 2021-04-20 17:11:10
+Build Date UTC : 2021-09-22 03:58:24
 -->
